--- a/index.html
+++ b/index.html
@@ -767,20 +767,20 @@
                 <div class="visual-card">
                     <div class="metric-grid">
                         <div class="metric">
-                            <div class="metric-label">Matches Analyzed</div>
-                            <div class="metric-value">15,000+</div>
+                            <div class="metric-label">Matches Analysed</div>
+                            <div class="metric-value">50,000+</div>
                         </div>
                         <div class="metric">
                             <div class="metric-label">Player Profiles</div>
-                            <div class="metric-value">8,500+</div>
-                        </div>
-                        <!-- <div class="metric">
-                            <div class="metric-label">Data Points</div>
-                            <div class="metric-value">2.5M+</div>
+                            <div class="metric-value">5000+</div>
                         </div>
                         <div class="metric">
-                            <div class="metric-label">Accuracy Rate</div>
-                            <div class="metric-value">94%</div> -->
+                            <div class="metric-label">Team Data Points</div>
+                            <div class="metric-value">12,000+</div>
+                        </div>
+                        <div class="metric">
+                            <div class="metric-label">Player Data Points</div>
+                            <div class="metric-value">14,000+</div>
                         </div>
                     </div>
                     <div class="chart-placeholder">
@@ -909,7 +909,7 @@
                 Access comprehensive football analytics and insights now
             </p>
             <!-- IMPORTANT: Replace this URL with your actual Streamlit app URL -->
-            <a href="YOUR_STREAMLIT_APP_URL_HERE" class="btn-cta-large">
+            <a href="app.trader1x2.com" class="btn-cta-large">
                 Launch Trader1X2 Platform
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
