--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
                 Access comprehensive football analytics and insights now
             </p>
             <!-- IMPORTANT: Replace this URL with your actual Streamlit app URL -->
-            <a href="app.trader1x2.com" class="btn-cta-large">
+            <a href="https://app.trader1x2.com" class="btn-cta-large">
                 Launch Trader1X2 Platform
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
